--- a/Scriptdown.iatemplate/Contents/Info.plist
+++ b/Scriptdown.iatemplate/Contents/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleName</key>
 	<string>Scriptdown</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.5</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>IATemplateDocumentFile</key>
@@ -31,6 +31,8 @@
 	<key>IATemplateAuthor</key>
 	<string>Russell Warner</string>
 	<key>IATemplateAuthorURL</key>
-	<string>https://russellbits.com/IAtemplates</string>
+	<string>https://russellbits.com/</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2018 Russell Warner. All rights reserved.</string>
 </dict>
 </plist>
